--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "gsap": "^3.13.0",
     "lucide-vue-next": "^0.507.0",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13"
