--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
@@ -17,7 +19,12 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.1.0",
     "@vitejs/plugin-vue": "^5.2.2",
-    "vite": "^6.3.1"
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^17.4.6",
+    "jsdom": "^26.1.0",
+    "vite": "^6.3.1",
+    "vitest": "^3.1.2"
   }
 }
